# mailmask

./: CMakeLists.txt  README.md
cmake/: FindMySQL.cmake
config/: db.mysql.sql  mailmask.conf
src/: db.h  mailmask.c
systemd/: mailmask.service.in
